Added support for multiple communities and additional authorization issuers

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@ node_modules/
 *.p12
 *.pfx
 *.pem
+*.cert
+*.key
 .serverless/
 serverless.yml
 deploy/work/*.yml
 deploy/work/state
+resource_servers.json
