--- a/deploy/aws/okta/serverless-example.yml
+++ b/deploy/aws/okta/serverless-example.yml
@@ -19,30 +19,10 @@ params:
     #Base URL of the FHIR server that this implementation is protecting.
     FHIR_BASE_URL: https://your.fhir.server
 
-    #signing algorithm for jwt
-    SIGNING_ALGORITHM: RS256
-    IDP_SIGNING_ALGORITHM: RS256
-
-    OAUTH_RESOURCE_SERVER_ID: yourauthzserverid
-    OAUTH_IDP_RESOURCE_SERVER_ID: youridpauthzserverid
-
-    #Allows us to set these paths because the backend authz server can have different token/authorize paths.
-    #These are the paths for the FHIR Resource server audience.
-    ISSUER_PATH: /oauth2/${param:OAUTH_RESOURCE_SERVER_ID}
-    TOKEN_PATH: /oauth2/${param:OAUTH_RESOURCE_SERVER_ID}/v1/token
-    AUTHORIZE_PATH: /oauth2/${param:OAUTH_RESOURCE_SERVER_ID}/v1/authorize
-    INTROSPECT_PATH: /oauth2/${param:OAUTH_RESOURCE_SERVER_ID}/v1/introspect
-    REVOKE_PATH: /oauth2/${param:OAUTH_RESOURCE_SERVER_ID}/v1/revoke
-    REGISTRATION_PATH: /oauth2/${param:OAUTH_RESOURCE_SERVER_ID}/register
-
-    #These are the paths for the IDP Resource server audience.
-    IDP_ISSUER_PATH: /oauth2/${param:OAUTH_IDP_RESOURCE_SERVER_ID}
-    IDP_TOKEN_PATH: /oauth2/${param:OAUTH_IDP_RESOURCE_SERVER_ID}/v1/token
-    IDP_AUTHORIZE_PATH: /oauth2/${param:OAUTH_IDP_RESOURCE_SERVER_ID}/v1/authorize
-    IDP_METADATA_PATH: /oauth2/${param:OAUTH_IDP_RESOURCE_SERVER_ID}/.well-known/udap
-    IDP_INTROSPECT_PATH: /oauth2/${param:OAUTH_IDP_RESOURCE_SERVER_ID}/v1/introspect
-    IDP_REVOKE_PATH: /oauth2/${param:OAUTH_IDP_RESOURCE_SERVER_ID}/v1/revoke
-    IDP_REGISTRATION_PATH: /oauth2/${param:OAUTH_IDP_RESOURCE_SERVER_ID}/register
+    #Used by well known metadata logic to calculate paths for oauth endpoints.
+    OAUTH_AUTHORIZE_ENDPOINT_PATTERN: https://${param:BASE_DOMAIN}/oauth2/<resource_server_id>/v1/authorize
+    OAUTH_TOKEN_ENDPOINT_PATTERN: https://${param:BASE_DOMAIN}/oauth2/<resource_server_id>/v1/token
+    OAUTH_REGISTRATION_ENDPOINT_PATTERN: https://${param:BASE_DOMAIN}/oauth2/<resource_server_id>/register
 
     TIERED_OAUTH_REDIRECT_PATH: /oauth2/v1/authorize/callback
 
@@ -54,15 +34,6 @@ params:
     OAUTH_CLIENT_ID: client_id_for_okta_m2m_app_for_management_api
     OAUTH_PRIVATE_KEY_FILE: ./private_key_jwks_file_from_app_in_okta
     OAUTH_CLIENT_TOKEN_ENDPOINT: https://${param:OAUTH_ORG}/oauth2/v1/token
-
-    #Certificate to use to determine the trust community.
-    COMMUNITY_CERT: ./EMRDirectTestCA.crt
-    SERVER_KEY: ./server.p12
-    SERVER_KEY_PWD: your_p12_password
-
-    #enables the ability for the IDP/CSP to have a different keystore than the dataholder authorization server.
-    IDP_SERVER_KEY: ./server.p12
-    IDP_SERVER_KEY_PWD: your_p12_password
 
     #Details to use for dynamic client registration as a tiered-oauth data holder.
     ORGANIZATION_NAME: your_org_name_here
@@ -93,25 +64,11 @@ provider:
   environment:
     BASE_DOMAIN: ${param:BASE_DOMAIN}
     FHIR_BASE_URL: ${param:FHIR_BASE_URL}
-    SIGNING_ALGORITHM:  ${param:SIGNING_ALGORITHM}
-    IDP_SIGNING_ALGORITHM: ${param:IDP_SIGNING_ALGORITHM}
+    OAUTH_CUSTOM_DOMAIN_NAME_BACKEND: ${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}
 
-    ISSUER_PATH: https://${param:BASE_DOMAIN}${param:ISSUER_PATH}
-    TOKEN_PATH: ${param:TOKEN_PATH}
-    TOKEN_ENDPOINT: https://${param:BASE_DOMAIN}${param:TOKEN_PATH}
-    AUTHORIZE_PATH: ${param:AUTHORIZE_PATH}
-    AUTHORIZE_ENDPOINT: https://${param:BASE_DOMAIN}${param:AUTHORIZE_PATH}
-    INTROSPECT_ENDPOINT: https://${param:BASE_DOMAIN}${param:INTROSPECT_PATH}
-    REVOKE_ENDPOINT: https://${param:BASE_DOMAIN}${param:REVOKE_PATH}
-    REGISTRATION_PATH: ${param:REGISTRATION_PATH}
-    REGISTRATION_ENDPOINT: https://${param:BASE_DOMAIN}${param:REGISTRATION_PATH}
-
-    IDP_ISSUER_PATH: https://${param:BASE_DOMAIN}${param:IDP_ISSUER_PATH}
-    IDP_TOKEN_ENDPOINT: https://${param:BASE_DOMAIN}${param:IDP_TOKEN_PATH}
-    IDP_AUTHORIZE_ENDPOINT: https://${param:BASE_DOMAIN}${param:IDP_AUTHORIZE_PATH}
-    IDP_INTROSPECT_ENDPOINT: https://${param:BASE_DOMAIN}${param:IDP_INTROSPECT_PATH}
-    IDP_REVOKE_ENDPOINT: https://${param:BASE_DOMAIN}${param:IDP_REVOKE_PATH}
-    IDP_REGISTRATION_ENDPOINT: https://${param:BASE_DOMAIN}${param:IDP_REGISTRATION_PATH}
+    OAUTH_AUTHORIZE_ENDPOINT_PATTERN: ${param:OAUTH_AUTHORIZE_ENDPOINT_PATTERN}
+    OAUTH_TOKEN_ENDPOINT_PATTERN: ${param:OAUTH_TOKEN_ENDPOINT_PATTERN}
+    OAUTH_REGISTRATION_ENDPOINT_PATTERN: ${param:OAUTH_REGISTRATION_ENDPOINT_PATTERN}
 
     TIERED_OAUTH_REDIRECT_ENDPOINT: https://${param:BASE_DOMAIN}${param:TIERED_OAUTH_REDIRECT_PATH}
 
@@ -119,20 +76,6 @@ provider:
     OAUTH_CLIENT_ID: ${param:OAUTH_CLIENT_ID}
     OAUTH_PRIVATE_KEY_FILE: ${param:OAUTH_PRIVATE_KEY_FILE}
     OAUTH_CLIENT_TOKEN_ENDPOINT: ${param:OAUTH_CLIENT_TOKEN_ENDPOINT}
-
-    OAUTH_ORG_VANITY_URL_TOKEN_ENDPOINT: https://${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}${param:TOKEN_PATH}
-    OAUTH_ORG_VANITY_URL_AUTHORIZE_ENDPOINT: https://${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}${param:AUTHORIZE_PATH}
-    OAUTH_ORG_VANITY_URL_IDP_TOKEN_ENDPOINT: https://${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}${param:IDP_TOKEN_PATH}
-    OAUTH_ORG_VANITY_URL_IDP_AUTHORIZE_ENDPOINT: https://${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}${param:IDP_AUTHORIZE_PATH}
-    
-    COMMUNITY_CERT: ${param:COMMUNITY_CERT}
-    SERVER_KEY: ${param:SERVER_KEY}
-    SERVER_KEY_PWD: ${param:SERVER_KEY_PWD}
-    SERVER_SAN: https://${param:BASE_DOMAIN}${param:ISSUER_PATH}
-
-    IDP_SERVER_KEY: ${param:IDP_SERVER_KEY}
-    IDP_SERVER_KEY_PWD: ${param:IDP_SERVER_KEY_PWD}
-    IDP_SERVER_SAN: https://${param:BASE_DOMAIN}${param:IDP_ISSUER_PATH}
 
     ORGANIZATION_NAME: ${param:ORGANIZATION_NAME}
     ORGANIZATION_ID: ${param:ORGANIZATION_ID}
@@ -144,9 +87,6 @@ provider:
 
     OAUTH_PLATFORM: ${param:OAUTH_PLATFORM}
 
-    OAUTH_RESOURCE_SERVER_ID: ${param:OAUTH_RESOURCE_SERVER_ID}
-    OAUTH_IDP_RESOURCE_SERVER_ID: ${param:OAUTH_IDP_RESOURCE_SERVER_ID}
-    
 #Provide additional access to allow read/write to our refresh token cache
   iamRoleStatements:
     - Effect: Allow
@@ -174,24 +114,17 @@ functions:
 ##TOKEN ENDPOINT THAT VALIDATES INBOUND JWTs AGAINST THE TRUST COMMUNITIES
   token-proxy:
     handler: ${self:provider.name}/token.tokenHandler
+    timeout: 20
     events:
       - http:
-          path: ${param:TOKEN_PATH}
-          method: POST
-          cors: true
-
-##TOKEN ENDPOINT THAT SERVES TIERED OAUTH REQUESTS AS AN IDP.
-  idp-token-proxy:
-    handler: ${self:provider.name}/token.tokenHandler
-    events:
-      - http:
-          path: ${param:IDP_TOKEN_PATH}
+          path: /oauth2/{resourceServerId}/v1/token
           method: POST
           cors: true
 
 ##OUTBOUND TOKEN ENDPOINT THAT PERFORMS UDAP SPECIFIC STUFF IN THE FINAL /TOKEN REQUEST.
   tiered-token-client:
     handler: ${self:provider.name}/tiered_token_client.tieredTokenClientHandler
+    timeout: 20
     events:
       - http:
           path: /{idpId}/tiered_client/token
@@ -201,17 +134,10 @@ functions:
 ##Trusted UDAP DCR Proxy
   tdcr_udap:
     handler: ${self:provider.name}/tdcr_udap.clientRegistrationHandler
+    timeout: 20
     events:
       - http:
-          path: ${param:REGISTRATION_PATH}
-          method: POST
-
-##Trusted UDAP DCR Proxy operating in CSP/IDP Mode.
-  tdcr_udap_idp:
-    handler: ${self:provider.name}/tdcr_udap.clientRegistrationHandler
-    events:
-      - http:
-          path: ${param:IDP_REGISTRATION_PATH}
+          path: /oauth2/{resourceServerId}/register
           method: POST
 
 ##AUTHORIZE PROXY THAT PERFORMS TIERED-OAUTH2
@@ -220,22 +146,16 @@ functions:
     timeout: 20
     events:
       - http:
-          path: ${param:AUTHORIZE_PATH}
+          path: /oauth2/{resourceServerId}/v1/authorize
           method: GET
 
-  idp-authorize-proxy:
-    handler: ${self:provider.name}/authorize.authorizeHandler
+##WELL KNOWN FOR UDAP IDP
+  udap_well_known:
+    handler: ${self:provider.name}/udap_well_known.udapConfigHandler
     timeout: 20
     events:
       - http:
-          path: ${param:IDP_AUTHORIZE_PATH}
-          method: GET
-
-  idp_udap_well_known:
-    handler: ${self:provider.name}/udap_well_known.udapConfigHandler
-    events:
-      - http:
-          path: ${param:IDP_METADATA_PATH}
+          path: /oauth2/{resourceServerId}/.well-known/udap
           method: GET
 
 custom:
@@ -256,195 +176,140 @@ custom:
 resources:
   Resources:
     authzServiceCFDistribution:
-      Type: "AWS::CloudFront::Distribution"
+      Type: AWS::CloudFront::Distribution
       Properties:
         DistributionConfig:
           Aliases:
-          - ${param:BASE_DOMAIN}
+            - ${param:BASE_DOMAIN}
           Origins:
-          - #THIS ONE IS THE API GATEWAY
-            ConnectionAttempts: 3
-            ConnectionTimeout: 10
-            CustomOriginConfig:
-              HTTPPort: 80
-              HTTPSPort: 443
-              OriginKeepaliveTimeout: 5
-              OriginProtocolPolicy: "https-only"
-              OriginReadTimeout: 30
-              OriginSSLProtocols:
-              - "TLSv1.2"
-            DomainName: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            Id: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            OriginPath: ""
-          - #THIS ONE IS THE AUTHZ SERVER
-            ConnectionAttempts: 3
-            ConnectionTimeout: 10
-            CustomOriginConfig:
-              HTTPPort: 80
-              HTTPSPort: 443
-              OriginKeepaliveTimeout: 5
-              OriginProtocolPolicy: "https-only"
-              OriginReadTimeout: 30
-              OriginSSLProtocols:
-              - "TLSv1.2"
-            DomainName: ${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}
-            Id: ${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}
-            OriginPath: ""
+            - ConnectionAttempts: 3
+              ConnectionTimeout: 10
+              CustomOriginConfig:
+                HTTPPort: 80
+                HTTPSPort: 443
+                OriginKeepaliveTimeout: 5
+                OriginProtocolPolicy: https-only
+                OriginReadTimeout: 30
+                OriginSSLProtocols:
+                  - TLSv1.2
+              DomainName: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
+              Id: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
+              OriginPath: ""
+            - ConnectionAttempts: 3
+              ConnectionTimeout: 10
+              CustomOriginConfig:
+                HTTPPort: 80
+                HTTPSPort: 443
+                OriginKeepaliveTimeout: 5
+                OriginProtocolPolicy: https-only
+                OriginReadTimeout: 30
+                OriginSSLProtocols:
+                  - TLSv1.2
+              DomainName: ${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}
+              Id: ${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}
+              OriginPath: ""
           DefaultCacheBehavior:
             AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
+              - HEAD
+              - DELETE
+              - POST
+              - GET
+              - OPTIONS
+              - PUT
+              - PATCH
             Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
+            CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
+            OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
             SmoothStreaming: false
             TargetOriginId: ${param:OAUTH_CUSTOM_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
+            ViewerProtocolPolicy: https-only
           CacheBehaviors:
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: ${param:TOKEN_PATH}
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: ${param:IDP_TOKEN_PATH}
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: ${param:AUTHORIZE_PATH}
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: ${param:IDP_AUTHORIZE_PATH}
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: ${param:REGISTRATION_PATH}
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: ${param:IDP_REGISTRATION_PATH}
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: /*/tiered_client/token
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
-          -
-            AllowedMethods:
-            - "HEAD"
-            - "DELETE"
-            - "POST"
-            - "GET"
-            - "OPTIONS"
-            - "PUT"
-            - "PATCH"
-            Compress: false
-            CachePolicyId: "4135ea2d-6df8-44a3-9df3-4b5a84be39ad"
-            OriginRequestPolicyId: "216adef6-5c7f-47e4-b989-5492eafa07d3"
-            PathPattern: ${param:IDP_METADATA_PATH}
-            SmoothStreaming: false
-            TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
-            ViewerProtocolPolicy: "https-only"
+            - AllowedMethods:
+                - HEAD
+                - DELETE
+                - POST
+                - GET
+                - OPTIONS
+                - PUT
+                - PATCH
+              Compress: false
+              CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
+              OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
+              PathPattern: /oauth2/*/v1/token
+              SmoothStreaming: false
+              TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
+              ViewerProtocolPolicy: https-only
+            - AllowedMethods:
+                - HEAD
+                - DELETE
+                - POST
+                - GET
+                - OPTIONS
+                - PUT
+                - PATCH
+              Compress: false
+              CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
+              OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
+              PathPattern: /oauth2/*/v1/authorize
+              SmoothStreaming: false
+              TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
+              ViewerProtocolPolicy: https-only
+            - AllowedMethods:
+                - HEAD
+                - DELETE
+                - POST
+                - GET
+                - OPTIONS
+                - PUT
+                - PATCH
+              Compress: false
+              CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
+              OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
+              PathPattern: /oauth2/*/register
+              SmoothStreaming: false
+              TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
+              ViewerProtocolPolicy: https-only
+            - AllowedMethods:
+                - HEAD
+                - DELETE
+                - POST
+                - GET
+                - OPTIONS
+                - PUT
+                - PATCH
+              Compress: false
+              CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
+              OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
+              PathPattern: /*/tiered_client/token
+              SmoothStreaming: false
+              TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
+              ViewerProtocolPolicy: https-only
+            - AllowedMethods:
+                - HEAD
+                - DELETE
+                - POST
+                - GET
+                - OPTIONS
+                - PUT
+                - PATCH
+              Compress: false
+              CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
+              OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
+              PathPattern: /oauth2/*/.well-known/udap
+              SmoothStreaming: false
+              TargetOriginId: ${param:API_GATEWAY_DOMAIN_NAME_BACKEND}
+              ViewerProtocolPolicy: https-only
           Comment: ""
-          PriceClass: "PriceClass_All"
+          PriceClass: PriceClass_All
           Enabled: true
           ViewerCertificate:
             AcmCertificateArn: ${certificate(${self:custom.customCertificate.certificateName}):CertificateArn}
-            MinimumProtocolVersion: "TLSv1.2_2021"
-            SslSupportMethod: "sni-only"
+            MinimumProtocolVersion: TLSv1.2_2021
+            SslSupportMethod: sni-only
           Restrictions:
             GeoRestriction:
-              RestrictionType: "none"
-          HttpVersion: "http2"
+              RestrictionType: none
+          HttpVersion: http2
           DefaultRootObject: ""
           IPV6Enabled: false
 
